--- a/oplan/static/oplan/styles.css
+++ b/oplan/static/oplan/styles.css
@@ -1,7 +1,10 @@
 
-#header{background:#444;padding:10px 40px;color:#eee;min-height:20px;}
-#header #branding h1 { margin:0 10px 0 0; font-size: 12pt; font-weight: bold; color: white; }
-#header a.ml, #header div.ml {margin:0 10px 10px;display:block;float:left;color:#00ffff;font-weight:bold;}
+#header{background:#444;padding:0 40px;color:#eee;min-height:60px; box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75); }
+#header #branding h1 { margin:0 10px 0 0; padding: 10px 0; font-size: 12pt; font-weight: bold; color: white; }
+#header #branding h1 a { color: white; text-decoration: none; }
+#header #user-tools { padding: 10px 0; height: 100%; }
+#header a.ml, #header div.ml {margin:0 10px; padding: 10px 10px; display:block;float:left;color:#ffffff;font-weight:bold;text-decoration:none;}
+#header a.ml:hover, #header div.ml:hover { text-decoration:none; background-color: #777; color: #fff; }
 
 #content{padding-bottom: 0;}
 #footer{padding:0;}
@@ -38,6 +41,12 @@
 .ddmenu div:hover { background: #eee; }
 .ddmenu div.disabled, .ddmenu div.disabled:hover { color: #777; background: inherit; }
 .ddmenu .right { float:right; }
+
+#header .ddmenu { position: absolute; top: 58px; left: -5px; font-weight: normal; display: none; border: none; overflow-y: auto;  box-shadow: 2px 2px 6px #999, -2px 2px 6px #999; background: #444; padding:  0; min-width: 200px; z-index: 9999; }
+#header .ddmenu div, #header .ddmenu a { display: block; padding: 5px 20px; cursor: pointer; color: #fff !important; line-height: 1.4; text-decoration: none; }
+#header .ddmenu a:hover, #header .ddmenu div:hover { background: #777; text-decoration: none; }
+#header .ddmenu a.disabled, #header .ddmenu a.disabled:hover { color: #777; background: inherit; }
+#header .ddmenu .right { float:right; }
 
 .fc-event {margin-right: 5px }
 a.fc-event[href] { color: white; }
