adds eduroam assign account view

--- a/eduroam/templates/admin/eduroam/guestaccount/change_list.html
+++ b/eduroam/templates/admin/eduroam/guestaccount/change_list.html
@@ -4,6 +4,9 @@
 {% block object-tools-items %}
 
     <li>
+        <a href="{% url 'eduroam:assign_guest_acc' %}" class="grp-state-focus" class="addlink">Gastaccount vergeben</a>
+    </li>
+    <li>
         <a href="{% url 'eduroam:import_guest_acc' %}" class="grp-state-focus" class="addlink">Importieren</a>
     </li>
 
