new mobile anmeldung design, with omnisearch

--- a/eduroam/templates/eduroam/assign_account.html
+++ b/eduroam/templates/eduroam/assign_account.html
@@ -27,7 +27,7 @@
 
   <h2>Personalausweis überprüfen!</h2>
   <div class="formgroup">
-    <label for="perso_id">optional: Personalausweisnummer:</label>
+    <label for="perso_id">Personalausweisnummer:</label>
     <input type="text" name="perso_id" />
   </div>
 
