--- a/oplan/static/oplan/styles.css
+++ b/oplan/static/oplan/styles.css
@@ -72,4 +72,7 @@ a.fc-event[href]:hover { text-decoration:underline; }
 .datemark-no { color: #bbbbbb; }
 .datemark-no:hover { color: #fff; background: #884444 }
 
-.prettyform .formgroup label { display: inline-block; min-width: 250px; text-align: right; padding-right: 1rem; }
+.prettyform .formgroup label { display: inline-block; min-width: 200px; text-align: right; padding-right: 1rem; }
+
+.mobile-kiffel { position: relative; padding: 15px; border: 1px solid #444; border-radius: 3px; margin-bottom: 1rem; }
+.mobile-kiffel .action { position: absolute; top: 5px; right: 15px; font-size: 4em; }
