--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -42,6 +42,7 @@ ul.buttons li a span.text { display: block; padding-top: 10px; font-size: 12pt; 
   <li><a href="https://kif.d120.de/twitterwall"><span class="fa fa-twitter"></span> <span class='text'>Twitterwall</span></a></li>
   <li><a href="https://orga.fachschaften.org/projects/kif-orga-440/issues"><span class="fa fa-paste"></span> <span class='text'>Orga-Wiki</span></a></li>
   <li><a href="https://www2.fachschaft.informatik.tu-darmstadt.de/pad/"><span class="fa fa-pencil"></span> <span class='text'>Pad Manager</span></a></li>
+  <li><a href="https://kif.d120.de/"><span class="fa fa-share-alt"></span> <span class='text'>KIF 44.0 Hub</span></a></li>
   <li><a href="https://www.fachschaft.informatik.tu-darmstadt.de/"><span class="fa fa-home"></span> <span class='text'>d120.de</span></a></li>
 </ul>
 
