--- a/oplan/static/oplan/styles.css
+++ b/oplan/static/oplan/styles.css
@@ -1,10 +1,10 @@
 .padding-top-1 { padding-top: 1rem; }
 
-#header{background:#444;padding:0 40px;color:#eee;min-height:60px; box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75); }
+#header{background:#444;padding:0 40px;color:#eee;min-height:60px; }
 #header #branding h1 { margin:0 10px 0 0; padding: 10px 0; font-size: 12pt; font-weight: bold; color: white; }
 #header #branding h1 a { color: white; text-decoration: none; }
 #header #user-tools { padding: 10px 0; height: 100%; }
-#header a.ml, #header div.ml {margin:0 10px; padding: 10px 10px; display:block;float:left;color:#ffffff;font-weight:bold;text-decoration:none;}
+#header a.ml, #header div.ml {margin:0 ; padding: 10px 15px; display:block;float:left;color:#ffffff;font-weight:bold;text-decoration:none;}
 #header div.ml { cursor: default; }
 #header a.ml:hover, #header div.ml:hover { text-decoration:none; background-color: #777; color: #fff; }
 
@@ -64,9 +64,10 @@ a.fc-event[href]:hover { text-decoration:underline; }
     #mainMenu{ padding: 10px ; }
     #container {min-width:inherit;width:inherit;position:inherit;}
     #header{width:inherit;height:auto;}
-    #header #branding {float:none;}
-    #header #user-tools {margin-top:-4em;}
-    #header a.ml { margin-left:0; }
+    #header #user-tools { }
+    #header #user-tools > * {text-transform:none;}
+    
+    #header .ml { display: none!important; }
 }
 
 .datemark { padding: 4px 0; margin: -4px 0; text-align: center; font-size: 140%; width: 1.6em; display: inline-block; cursor: pointer; }
