--- a/oplan/templates/oplan/ak_details_view.html
+++ b/oplan/templates/oplan/ak_details_view.html
@@ -12,4 +12,11 @@
 
 <div class="padding-top-1"></div>
 
+<h3>Wann und wo?</h3>
+<ul>
+{% for termin in ak.aktermin_set.all %}
+<li>{{ termin.start_time }} in Raum {{ termin.room.number }}</li>
+{% endfor %}
+</ul>
+
 {% endblock %}
