--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -49,7 +49,7 @@ ul.buttons li a.Color-Yellow:hover {background: #f7d240 }
 <h2>Öffentliche Dienste</h2>
 <ul class="buttons">
   <li><a class='Color-Blue' href="https://kif.d120.de/twitterwall"><span class="fa fa-twitter"></span> <span class='text'>Twitterwall</span></a></li>
-  <li><a class="Color-DarkPurple" href="https://caroline.d120.de/apfifoges/"><span class="fa fa-home"></span> <span class='text'>APFIFoGeS</span></a></li>
+  <li><a class="Color-DarkPurple" href="https://kif.d120.de/apfifoges/"><span class="fa fa-home"></span> <span class='text'>APFIFoGeS</span></a></li>
   <li><a class="Color-Orange" href="https://www.fachschaft.informatik.tu-darmstadt.de/"><span class="fa fa-home"></span> <span class='text'>d120.de</span></a></li>
 
   <li><a class="Color-Green" href="{% url 'oplan:ak_wall' %}"><span class="fa fa-calendar"></span> <span class='text'>AK-Wall</span></a></li>
