--- a/kiffel/templates/admin/kiffel/person/change_list.html
+++ b/kiffel/templates/admin/kiffel/person/change_list.html
@@ -10,6 +10,9 @@
     <li>
         <a href="{% url 'kiffel:import_personen_engel' %}" class="grp-state-focus" class="addlink">Engelimport</a>
     </li>
+    <li>
+        <a href="{% url 'kiffel:export_bmbf' %}" class="grp-state-focus" class="addlink">BMBF-Export</a>
+    </li>
 
     {{ block.super }}
 
