--- a/kiffel/templates/kiffel/import_csv_template.html
+++ b/kiffel/templates/kiffel/import_csv_template.html
@@ -6,7 +6,8 @@
 |||
 <a href='{% url "kiffel:createanonym" %}'>Anonyme Accounts</a> |
 <a href='{% url "kiffel:import_personen" %}'>Import Anmeldung</a> |
-<a href='{% url "kiffel:import_personen_engel" %}'>Import Engelsystem</a>
+<a href='{% url "kiffel:import_personen_engel" %}'>Import Engelsystem</a> |
+<a href='{% url "kiffel:export_bmbf" %}'>Export BMBF</a>
 </div>
 {% endblock %}
 
