--- a/oplan/templates/oplan/login.html
+++ b/oplan/templates/oplan/login.html
@@ -30,5 +30,6 @@
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
+<script> $("#id_username").focus() </script>
 
 {% endblock %}
